# Target-Policy-Optimization-TPO-implementation-in-PyTorch.-

./: .gitignore  README.md  pyproject.toml
`examples/: train_qwen_1_5b.py
`notebooks/: TPO_1_Click_Trainer.ipynb
`tpo_torch/: loss.py  models.py  trainer.py
examples/: train_qwen_1_5b.py
notebooks/: TPO_1_Click_Trainer.ipynb
path/to/: implementation_plan.md
test_output/checkpoint-1/: generation_config.json  trainer_state.json
test_output/checkpoint-2/: config.json  trainer_state.json
tests/: integration_test.py  test_e2e_training.py  test_tpo_loss.py
tiny_test/checkpoint-5/: config.json  trainer_state.json
tpo_torch/: __init__.py  loss.py  models.py  trainer.py
